examples/errors/primary_type_error.olang
Program: Main

class Main is
    method returnInteger() : Integer is
        var a : Real
        return a
    end
end